# ComfyUI-PixelArt-Detector

./: .gitignore  LICENSE  PixelArtDetector.py  README.md  __init__.py  grid.json  pixelUtils.py  pyproject.toml  requirements.txt  workflow.json  workflow_change_palette_webp.json  workflow_webp.json
.github/workflows/: publish.yml
example_workflows/: grid.json  img2img_webp.json  palette_generator.json  workflow.json  workflow_change_palette_webp.json  workflow_webp.json
pixelArtDetector/: pixelArtDetector.js
web/js/: pixelArtDetector.js  utils.js
