[project]
name = "comfyui-pixelart-detector"
description = "This node manipulates the pixel art image in ways that it should look pixel perfect (downscales, changes palette, upscales etc.)."
version = "1.7.3"
license = { file = "LICENSE" }
dependencies = ["opencv-python>=4.8.0", "Pillow", "numpy>=1.25.0", "torch", "scipy>=1.11.3", "pyclustering>=0.10.1"]

[project.urls]
Repository = "https://github.com/dimtoneff/ComfyUI-PixelArt-Detector"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "dimtoneff"
DisplayName = "ComfyUI-PixelArt-Detector"
Icon = "https://raw.githubusercontent.com/dimtoneff/ComfyUI-PixelArt-Detector/main/examples/community/image-041.jpg"
